--- a/Movies_Website/views/movies.mustache
+++ b/Movies_Website/views/movies.mustache
@@ -7,28 +7,34 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
+
        <div id="header">
-            <h1>Movies</h1>
-            <form id="genreSearchForm" method="GET" action="movies/genre/{{genreSelect.value}}">
-                <select name="genre" onchange="this.form.submit()" id="genreSelect">
-                    <option selected disabled>Search by Genre</option>
-                    <option value="action">Action</option>
-                    <option value="adventure">Adventure</option>
-                    <option value="animation">Animation</option>
-                    <option value="comedy">Comedy</option>
-                    <option value="crime">Crime</option>
-                    <option value="drama">Drama</option>
-                    <option value="fantasy">Fantasy</option>
-                    <option value="horror">Horror</option>
-                    <option value="kids">Kids</option>
-                    <option value="mystery">Mystery</option>
-                    <option value="romance">Romance</option>
-                    <option value="sci-fi">Sci-Fi</option>
-                    <option value="superhero">Superhero</option>
-                    <option value="thriller">Thriller</option>
-                </select>
-            </form>
+
+            <div class="header_content_div">
+                <h1>Movies</h1>
+            </div>
+
+            <div class="dropdown_div">
+                    <select name="genre" id="genreSelectDropdown">
+                        <option selected disabled>Search by Genre</option>
+                        <option value="action">Action</option>
+                        <option value="adventure">Adventure</option>
+                        <option value="animation">Animation</option>
+                        <option value="comedy">Comedy</option>
+                        <option value="crime">Crime</option>
+                        <option value="drama">Drama</option>
+                        <option value="fantasy">Fantasy</option>
+                        <option value="horror">Horror</option>
+                        <option value="kids">Kids</option>
+                        <option value="mystery">Mystery</option>
+                        <option value="romance">Romance</option>
+                        <option value="sci-fi">Sci-Fi</option>
+                        <option value="superhero">Superhero</option>
+                        <option value="thriller">Thriller</option>
+                    </select>
+            </div>
         </div>
+
         <div id="addMovieButton_container">
             <button id="addMovieButton">Add a movie to the database</button>
             <form id="addMovieForm"></form>
