--- a/Blogs_Database/views/index.mustache
+++ b/Blogs_Database/views/index.mustache
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <ul>
+    <div id="allBlogsContainer">
         {{#blogs}}
-        <li>
-            {{title}}
-            {{body}}
-            {{date_created}}
-            {{date_updated}}
-            {{is_published}}
-        </li>
+        
+        <div class="blogs_container">
+            <div class="title_div">{{title}}</div>
+            <div class="body_div">{{body}}</div>
+            <div class="dates_div">{{date_created}}</div>
+        </div>
 
         {{/blogs}}
-    </ul>
+    </div>
 
 </body>
 </html>
