--- a/hello-react-website/src/App.css
+++ b/hello-react-website/src/App.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   background: #282c34;
-  padding: 2em;
+  /* padding: 2em; */
 }
 
 .header {
   display: flex;
   justify-content: space-between;
-  margin: 1rem;
+  /* margin: 1rem; */
   background-color: #2867B2;
   color: white;
 }
